--- a/utils/email/template/requestResetPassword.handlebars
+++ b/utils/email/template/requestResetPassword.handlebars
@@ -1,13 +1,36 @@
 <html>
-    <head>
-        <style>
+  <head>
+    <style>
+      body {
+        background-color: #d3d3d3;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
 
-        </style>
-    </head>
-    <body>
-        <p>Hi {{name}},</p>
-        <p>You requested to reset your password.</p>
-        <p> Please, click the link below to reset your password</p>
-        <a href="https://{{link}}">Reset Password</a>
-    </body>
+      p {
+        font-size: 20px;
+        text-align: center;
+      }
+
+     
+      a{
+        font-size: 15px;
+      }
+    </style>
+  </head>
+  <body>
+    <div style="text-align: center;">
+      <p style="font-weight: bolder;">Hi {{name}},</p>
+      <p>You requested to reset your password.</p>
+      <p>Please click the link below to reset your password:</p>
+      <a href="https://{{link}}">Reset Password</a>
+      <br/>
+   
+    </div>
+  </body>
+  <footer>
+ 
+  </footer>
 </html>
