--- a/utils/email/template/approveEnrollment.handlebars
+++ b/utils/email/template/approveEnrollment.handlebars
@@ -48,7 +48,7 @@
         }
 
         a:hover {
-            background-color: #0056b3;
+            background-color: white;
         }
     </style>
 </head>
@@ -61,8 +61,8 @@
             <p>Good day,</p>
             <p>{{firstName}} {{lastName}}'s enrollment for the class has been approved.</p>
             <p>The class is scheduled to start on September 25, 2023.</p>
-            <p>The teacher for this class will be Ms. Juliana Arevalo.</p>
-            <p>If you have any further questions about the class, please feel free to contact her at this number: 0906-124-4171.</p>
+            <p>The teacher for this class will be Mrs. Edna B. Argana.</p>
+            <p>If you have any further questions about the class, please feel free to contact her at this number: 8-741-7326.</p>
            
             <a href="https://mars-daycare-center.online/">Visit Website</a>
         </div>
