--- a/utils/email/template/approveEnrollment.handlebars
+++ b/utils/email/template/approveEnrollment.handlebars
@@ -61,8 +61,7 @@
             <p>Good day,</p>
             <p>{{firstName}} {{lastName}}'s enrollment for the class has been approved.</p>
             <p>The class is scheduled to start on September 25, 2023.</p>
-            <p>The teacher for this class will be Mrs. Edna B. Argana.</p>
-            <p>If you have any further questions about the class, please feel free to contact her at this number: 8-741-7326.</p>
+            <p>If you have any further questions about the class, please feel free to contact us at this number: 8-741-7326.</p>
            
             <a href="https://mars-daycare-center.online/">Visit Website</a>
         </div>
